--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,60 @@
-venv311/
+# Python
 __pycache__/
+*.py[cod]
+*$py.class
 *.pyc
+*.so
+.Python
+
+# Virtual Environment
+venv/
+venv311/
+ENV/
+env/
+.venv
+
+# Database (exclude local database files)
+stress_history.db
+*.db
+*.sqlite
+*.sqlite3
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
+desktop.ini
+
+# Logs
+*.log
+
+# Pretrained Models (too large for GitHub)
+pretrained_models/
+*.h5
+*.pkl
+*.pth
+*.onnx
+
+# Jupyter Notebooks
+.ipynb_checkpoints/
+*.ipynb
+
+# Environment variables
+.env
+.env.local
+
+# Testing
+.pytest_cache/
+.coverage
+htmlcov/
+
+# Build
+build/
+dist/
+*.egg-info/
