--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
 opencv-python==4.8.1.78
-tensorflow==2.13.0
+tensorflow==2.20.0
 fer==22.5.1
 speechbrain==0.5.15
 sounddevice==0.4.6
-numpy==1.24.3
+numpy==1.26.4
 torch==2.0.1
 torchaudio==2.0.2
 librosa==0.10.1
 scipy==1.11.4
 matplotlib==3.7.2
+flask==3.0.0
+flask-cors==4.0.0
